deployment/cloud_service/cloud_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cloud-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: web-gw
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: jaeger-gw
      protocol: HTTP
      port: 5678
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-route
  namespace: observe
spec:
  parentRefs:
    - name: cloud-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /jaeger
      backendRefs:
        - kind: Service
          name: jaeger-query
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: dashboard
spec:
  parentRefs:
    - name: cloud-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - kind: Service
          name: prometheus-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: observe
spec:
  parentRefs:
    - name: cloud-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      backendRefs:
        - kind: Service
          name: prometheus-kube-prometheus-prometheus
          port: 9090

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
    - name: cloud-gateway
      namespace: default
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hubble/
      backendRefs:
        - kind: Service
          name: hubble-ui
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-collector-route
  namespace: observe
spec:
  parentRefs:
    - name: cloud-gateway
      namespace: default
      sectionName: jaeger-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: jaeger-collector
          port: 4317
